ui: navbar right align - mobile fix

--- a/server/ui/ui-en/css/awt.css
+++ b/server/ui/ui-en/css/awt.css
@@ -29,6 +29,7 @@ body {
 
 .navbar-top-links {
 	margin-right: 0;
+	text-align: right;
 }
 
 .navbar-top-links li {
